<?xml version="1.0"?>
<package format="2">
  <name>agv</name>
  <version>0.0.0</version>
  <description>The agv package</description>
  <maintainer email="shuo.sun@nus.edu.sg">agv</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>autoware_msgs</depend>
  <!-- <depend>obstacle_detector</depend> -->
  <depend>joy</depend>
  <depend>pid</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
